# ai-backend

./: pyproject.toml
app/: api.py
chroma/: chroma.sqlite3
configurations/: config.py  config_llm.py  config_prompts.py  config_surveys.py  config_templates.py  config_tts_stt.py  config_user_managers.py  config_vectordb.py
documents/conversations_examples/: conversations.json  conversations.jsonl  conversations.txt  conversations_test.jsonl  conversations_train.jsonl  conversations_val.jsonl
documents/master_prompts/: first_session.txt  first_session_master.txt  first_session_summary.txt  personal_information.txt  session_summary.txt  sessions_master.txt  state_0.txt  summary_conversation.txt  summary_conversation_finish_session.txt  update_personal_information.txt
documents/predefined_messages/: welcome_message_new_user.txt  welcome_message_old_user.txt  welcome_messages.txt
documents/templates/: personal_information_template.txt
modules/chatbot/: chatbot.py  conversation_analysis.py  conversation_manager.py  prompt_config.py  search_databases.py  (+2 more)
olds_files/: chatbots.py
tests/: create_new_user.py  test_Eve_v1_without_interfaces.py  test_Eve_v2_without_interfaces.py  test_Eve_v3_without_interfaces.py  test_Eve_v4_with_interfaces.py  test_Eve_v4a_with_interfaces.py  test_Eve_v4b_with_interfaces.py  test_Eve_v5_with_interfaces.py  test_Eve_v5_without_interfaces.py  test_Eve_v5a_with_interfaces.py  test_Eve_v5a_without_interfaces.py  test_Eve_v5b_with_interfaces.py  test_Eve_v5b_without_interfaces.py  test_Eve_v6_without_interfaces.py
users/: users.csv
(+315 files in other folders)
