[tool.poetry]
name = "eve-project"
version = "0.1.0"
description = ""
authors = ["bzorzet98 <bzorzet@sinc.unl.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.0.2"
chromadb = "^0.4.15"
openai = "1.3.0"
langchain = "0.0.345"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
keybert = "^0.8.3"
beautifulsoup4 = "4.12.2"
unstructured = {extras = ["pdf"], version = "^0.11.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
